unpackaged/main/default/objects/CM_Location__c/CM_Location__c.object-meta.xml
<CustomObject>
    <description>Case Related Locations are used to hold location information related to cases, such as the address of doctors and what type of medical assistance provided there.</description>
    <label>CM Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>