unpackaged/main/default/objects/CM_Location__c/fields/API_External_Id__c.field-meta.xml
<CustomField>
    <fullName>API_External_Id__c</fullName>
    <description>API External Id as provided via the Custom Intake API</description>
    <externalId>true</externalId>
    <inlineHelpText>API External Id as provided via the Custom Intake API</inlineHelpText>
    <label>API External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>