unpackaged/main/default/objects/CM_Location__c/fields/Business_Annual_Revenue_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Business_Annual_Revenue_Estimate__c</fullName>
    <label>Business - Annual Revenue Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>