unpackaged/main/default/objects/CM_Location__c/fields/Business_Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Business_Description__c</fullName>
    <label>Business - Business Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>