unpackaged/main/default/objects/CM_Location__c/fields/Business_CompoundAddress__c.field-meta.xml
<CustomField>
    <fullName>Business_CompoundAddress__c</fullName>
    <description>Address for the Facility, provider or exposure
**PLEASE DO NOT CHANGE API NAME** CompoundAddress must remain in order to work with custom api</description>
    <inlineHelpText>Address for the Facility and or provider</inlineHelpText>
    <label>Business Address</label>
    <type>Address</type>
</CustomField>