unpackaged/main/default/objects/CM_Location__c/fields/Business_Legal_Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Business_Legal_Name_of_Business__c</fullName>
    <label>Business - Legal Name of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>