unpackaged/main/default/objects/CM_Location__c/fields/Business_Title_at_Business__c.field-meta.xml
<CustomField>
    <fullName>Business_Title_at_Business__c</fullName>
    <label>Business - Title at Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>