unpackaged/main/default/objects/CM_Location__c/fields/Business_Years_in_Operation__c.field-meta.xml
<CustomField>
    <fullName>Business_Years_in_Operation__c</fullName>
    <label>Business - Years in Operation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>