unpackaged/main/default/objects/CM_Location__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <description>Used by D&amp;C to determine the type of treatment received by the client.</description>
    <inlineHelpText>Type of treatment provided.</inlineHelpText>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Type</valueSetName>
    </valueSet>
</CustomField>