unpackaged/main/default/objects/CM_Location__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used for holding general information via a description field on information pertaining to the case management location.</description>
    <inlineHelpText>Details about location.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>