unpackaged/main/default/objects/CM_Location__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Used for Exposure &amp; Medical Facility. We should consider a blank value for scenarios where they are still using them and help show that.</description>
    <inlineHelpText>Date they stopped using product, provider or facility.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>