unpackaged/main/default/objects/CM_Location__c/fields/Exposure_Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Location_Information__c</fullName>
    <label>Exposure Location Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>