unpackaged/main/default/objects/CM_Location__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <description>Used by D&amp;C to describe the type of facility visted. Help determine what type of offices or services may have been provided.</description>
    <inlineHelpText>Type of care provided by facility.</inlineHelpText>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facility_Type</valueSetName>
    </valueSet>
</CustomField>