unpackaged/main/default/objects/CM_Location__c/fields/FX_Business_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>FX_Business_Address_Text__c</fullName>
    <description>Formula field - returns business compound address field as text. Used in Docrio Templates</description>
    <formula>Business_CompoundAddress__Street__s &amp; BR() &amp;
Business_CompoundAddress__City__s &amp;
IF(ISBLANK(Business_CompoundAddress__City__s), &quot;&quot;, &quot;, &quot;) &amp;
TEXT(Business_CompoundAddress__StateCode__s) &amp;
IF(ISBLANK(TEXT(Business_CompoundAddress__StateCode__s)), &quot;&quot;, &quot; &quot;) &amp;
Business_CompoundAddress__PostalCode__s &amp; BR() &amp;
TEXT(Business_CompoundAddress__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - returns business compound address field as text. Used in Docrio Templates</inlineHelpText>
    <label>Business Address (Text)</label>
    <type>Text</type>
</CustomField>