unpackaged/main/default/objects/CM_Location__c/fields/Medical_Type__c.field-meta.xml
<CustomField>
    <fullName>Medical_Type__c</fullName>
    <description>Used by D&amp;C to determine the type of medical information used, whether it is a facility or an individual provider.(I think)</description>
    <label>Medical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Type</valueSetName>
    </valueSet>
</CustomField>