unpackaged/main/default/objects/CM_Location__c/fields/Name_of_Location__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Location__c</fullName>
    <description>Used to provide a name to the location, edifice, office, building, company etc.</description>
    <inlineHelpText>Name of the provider&#39;s hospital, pharmacy or business</inlineHelpText>
    <label>Name of Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>