unpackaged/main/default/objects/CM_Location__c/fields/National_Provider_Identifier_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Provider_Identifier_Number__c</fullName>
    <label>National Provider Identifier Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>