unpackaged/main/default/objects/CM_Location__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <description>Pull the occupation of the injured party in this location to help understand exposure risks etc. (required from D&amp;C partner)</description>
    <inlineHelpText>Occupation at this location.</inlineHelpText>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occupations</valueSetName>
    </valueSet>
</CustomField>