unpackaged/main/default/objects/CM_Location__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <description>Primary Phone number to reach the facility and or provider.</description>
    <inlineHelpText>Primary Phone number to reach the facility and or provider.</inlineHelpText>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>