unpackaged/main/default/objects/CM_Location__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <description>Currently unknown use, but supposing it is what they were using the facility or provider for at the time.</description>
    <label>Problem</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>