unpackaged/main/default/objects/CM_Location__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>