unpackaged/main/default/objects/CM_Location__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>Used to show the type of property an occurrence happened on. This can be various types, but particularly the description of it like Residential or Commercial.</description>
    <inlineHelpText>Type of property of coverage question.</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations_and_Areas</valueSetName>
    </valueSet>
</CustomField>