unpackaged/main/default/objects/CM_Location__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <description>Determine if related person to this location is the property owner or not. Data collection.</description>
    <inlineHelpText>Is this person the property owner?</inlineHelpText>
    <label>Property Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>