unpackaged/main/default/objects/CM_Location__c/fields/Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_First_Name__c</fullName>
    <description>First name of the provider seen at that location, whether it is a doctor, pharmacist, staff, etc.</description>
    <inlineHelpText>First name of the primary provider at the location</inlineHelpText>
    <label>Provider First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>