unpackaged/main/default/objects/CM_Location__c/fields/Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Last_Name__c</fullName>
    <description>Last name of the provider seen at that location, whether it is a doctor, pharmacist, staff, etc.</description>
    <inlineHelpText>Last name of the primary provider at location</inlineHelpText>
    <label>Provider Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>