unpackaged/main/default/objects/CM_Location__c/fields/Provider_Title__c.field-meta.xml
<CustomField>
    <fullName>Provider_Title__c</fullName>
    <label>Provider Title</label>
    <type>TextArea</type>
</CustomField>