unpackaged/main/default/objects/CM_Location__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>This is the collection of the purchase date of land/home/item where the occurrence or exposure occurred, this is not a treatment question, but rather exposure.</description>
    <inlineHelpText>Exposure Question on the date purchased for land or home.</inlineHelpText>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>