unpackaged/main/default/objects/CM_Location__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>main purpose is for exposure, injury, or medical facility.</description>
    <inlineHelpText>main purpose is for exposure, injury, or medical facility.</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exposure</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Medical Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>