unpackaged/main/default/objects/CM_Location__c/fields/Remission_Check__c.field-meta.xml
<CustomField>
    <fullName>Remission_Check__c</fullName>
    <label>Remission Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>