unpackaged/main/default/objects/CM_Location__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Currently guessing right now, most likely used by D&amp;C to provide the outcome of the client&#39;s attendance to provider or their diagnosis etc.</description>
    <label>Solution</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>