unpackaged/main/default/objects/CM_Location__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Used for Exposure &amp; Medical Facility</description>
    <inlineHelpText>First date they started using product, provider or facility</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>