unpackaged/main/default/objects/CM_Location__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <formula>IF(
CONTAINS(Business_CompoundAddress__Street__s, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
LEFT(
Business_CompoundAddress__Street__s,
FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), Business_CompoundAddress__Street__s)
),
Business_CompoundAddress__Street__s
)</formula>
    <label>Street 1</label>
    <type>Text</type>
</CustomField>