unpackaged/main/default/objects/CM_Location__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <formula>IF(
CONTAINS(Business_CompoundAddress__Street__s, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
RIGHT(
Business_CompoundAddress__Street__s,
(LEN(Business_CompoundAddress__Street__s) - FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), Business_CompoundAddress__Street__s))
),
&quot;&quot;
)</formula>
    <label>Street 2</label>
    <type>Text</type>
</CustomField>