unpackaged/main/default/objects/CM_Location__c/fields/test_compoundAddress__c.field-meta.xml
<CustomField>
    <fullName>test_compoundAddress__c</fullName>
    <label>test compoundAddress</label>
    <type>Address</type>
</CustomField>