unpackaged/main/default/objects/CM_Location__c/fields/Total_Exposure_Years__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Years__c</fullName>
    <label>Total Exposure Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>