unpackaged/main/default/objects/CM_Location__c/fields/Treated_With_Radiation__c.field-meta.xml
<CustomField>
    <fullName>Treated_With_Radiation__c</fullName>
    <label>Treated With Radiation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>