unpackaged/main/default/objects/CM_Location__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used for Injury Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Hodgkins Lymphoma (NHL)</fullName>
            </value>
            <value>
                <fullName>Testicular Cancer</fullName>
            </value>
            <value>
                <fullName>Kidney Cancer</fullName>
            </value>
            <value>
                <fullName>Clear Cell Renal Carcinoma</fullName>
            </value>
            <value>
                <fullName>Liver Cancer</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>