unpackaged/main/default/objects/CM_Location__c/fields/Water_Bill__c.field-meta.xml
<CustomField>
    <fullName>Water_Bill__c</fullName>
    <description>Determine information about water bill. (I believe) used to determine how much evidence they have.</description>
    <inlineHelpText>Do they have a water bill?</inlineHelpText>
    <label>Water Bill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>