unpackaged/main/default/objects/CM_Location__c/fields/Water_Test__c.field-meta.xml
<CustomField>
    <fullName>Water_Test__c</fullName>
    <description>Used to determine whether the water has been test or not and if the results equaled what the question it came from was looking for.</description>
    <inlineHelpText>Did the water test positive for the questions chemical contents?</inlineHelpText>
    <label>Water Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>