unpackaged/main/default/objects/CM_Location__c/fields/Water_Well_Type__c.field-meta.xml
<CustomField>
    <fullName>Water_Well_Type__c</fullName>
    <description>Access information about the well or the type of maintenance/function of the well to show exposure information about the location</description>
    <inlineHelpText>Type of access to the Well, and who may run it.</inlineHelpText>
    <label>Water Well Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Access_Type</valueSetName>
    </valueSet>
</CustomField>