unpackaged/main/default/objects/CM_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Facility_Type__c</columns>
    <columns>Category_Type__c</columns>
    <columns>Medical_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>